# crud_project_ls19

./: Makefile  README.md  pyproject.toml
crud_project_ls19/: app.py  repository.py
crud_project_ls19/templates/posts/: index.html
tests/: test_app.py
